policies/pod-security-namespace-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: free5gc
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
